--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "build:android": "npx eas build -p android"
+    "build:android": "eas build -p android"
   },
   "jest": {
     "preset": "jest-expo"
